--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title th:text="'Клиент ' +  ${client.idPassport}"></title>
+        <title th:text="#{title.client.show} + ' ' + ${client.passport.id}"></title>
         <link rel="icon" th:href="@{/assets/bank-icon.png}">
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/main.css}">
@@ -27,8 +27,22 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/worker/profile}"><span th:text="#{nav.profile}"></span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active scroll-top"><span th:text="#{nav.clients}"></span></a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle scroll-top" role="button"
+                           data-toggle="dropdown"><span th:text="#{nav.clients}"></span>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item"
+                               th:text="#{nav.clients.show}" th:href="@{/client}"></a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" target="_blank"
+                               th:text="#{nav.clients.create}" th:href="@{/client/create}"></a>
+                            <a class="dropdown-item"
+                               th:text="#{nav.clients.edit}" th:href="@{/client/edit}"></a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item"
+                               th:text="#{nav.clients.delete}" th:href="@{/client/delete}"></a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/operations}"><span th:text="#{nav.actions}"></span></a>
@@ -46,13 +60,95 @@
         </header>
         <div class="container-fluid">
             <div class="row row-center">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
+                <div class="col-12">
                     <div class="rounded-container">
-                        <h4>Фамилия: <span th:text="${client.lastName}"></span></h4>
-                        <h4>Имя: <span th:text="${client.firstName}"></span></h4>
-                        <h4>Отчество: <span th:text="${client.middleName}"></span></h4>
-                        <h4>Паспорт: <span th:text="${client.IdPassport}"></span></h4>
+                        <div class="title">
+                            <i class="fas fa-user-astronaut"></i>
+                            <h2>
+                                <span th:text="
+                                    ${client.passport.lastName} + ' ' +
+                                    ${client.passport.firstName} + ' ' +
+                                    ${client.passport.middleName}">
+                                </span>
+                                <span class="badge badge-success"></span>
+                            </h2>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <ul class="nav nav-pills card-header-pills">
+                                    <li class="nav-item">
+                                        <a id="btn-general" class="nav-link active" href="#"
+                                           onclick="showCard('#general', '#btn-general')">
+                                            <span th:text="#{worker.public.information}"></span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a id="btn-personal" class="nav-link" href="#"
+                                           onclick="showCard('#personal', '#btn-personal')">
+                                            <span th:text="#{worker.private.information}"></span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link">
+                                            <span th:text="#{worker.profile.edit}"></span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div id="general" class="card-body">
+                                <div class="user-info">
+                                    <h5>
+                                        <span th:text="#{passport.last.name}"></span>:
+                                        <span th:text="${client.passport.lastName}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.first.name}"></span>:
+                                        <span th:text="${client.passport.firstName}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.middle.name}"></span>:
+                                        <span th:text="${client.passport.middleName}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.gender.label}"></span>:
+                                        <span th:text="(${client.passport.isMale} ?
+                                            #{passport.gender.male} : #{passport.gender.female})">
+                                        </span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.id}"></span>:
+                                        <span th:text="${client.passport.id}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.series}"></span>:
+                                        <span th:text="${client.passport.series}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.number}"></span>:
+                                        <span th:text="${client.passport.number}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.country.name}"></span>:
+                                        <span th:text="${client.passport.citizenship.countryName}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.date.of.issue}"></span>:
+                                        <span th:text="${client.passport.dateOfIssue}"></span>
+                                    </h5>
+                                    <h5>
+                                        <span th:text="#{passport.date.of.expire}"></span>:
+                                        <span th:text="${client.passport.dateOfExpire}"></span>
+                                    </h5>
+                                </div>
+                            </div>
+
+                            <div id="personal" class="card-body" style="display: none">
+                                <div class="user-info">
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
