--- a/src/main/resources/templates/worker/profile.html
+++ b/src/main/resources/templates/worker/profile.html
@@ -49,11 +49,13 @@
         </header>
         <div class="container-fluid">
             <div class="row row-center">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
+                <div class="col-12">
                     <div class="rounded-container">
                         <div class="title">
-                            <i class="fas fa-user-circle"></i>
+                            <div th:switch="${worker.accessLevel.id}">
+                                <span th:case="1"><i class="fas fa-user-secret"></i></span>
+                                <span th:case="*"><i class="fas fa-user-tie"></i></span>
+                            </div>
                             <h2>
                                 <span th:text="#{worker.greeting.text}"></span>
                                 <span class="badge badge-success" th:text="${worker.username}"></span>
@@ -133,7 +135,7 @@
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.country.name}"></span>:
-                                        <span th:text="${worker.passport.countryName}"></span>
+                                        <span th:text="${worker.passport.citizenship.countryName}"></span>
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.date.of.issue}"></span>:
@@ -149,7 +151,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1"></div>
         </div>
         <script th:src="@{/js/jquery-3.3.1.js}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
