--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,16 +6,6 @@ header {
     opacity: 0.9;
 }
 
-footer {
-    clear: both;
-    position: relative;
-    text-align: center;
-    padding: 0 10%;
-    background: #333333;
-    color: #fafafa;
-    border-radius: .5rem .5rem 0 0;
-}
-
 a {
     text-decoration: none;
     color: inherit;
@@ -23,37 +13,48 @@ a {
 }
 
 p {
+    font-size: 1.25rem;
     line-height: 1.5;
+    /*white-space: pre-wrap;*/
 }
 
 .nav-link {
     font-weight: 600;
 }
 
-.background-img {
-    background-image: url("../assets/280.png");
+.btn {
+    font-weight: 600;
 }
 
-.title {
+.background-img {
+    background-image: url("../assets/280.png");
+    /*background: #cccccc;*/
+}
+
+.title-container {
     font-size: 64px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 2%;
-    padding: 3% 0;
-    border-radius: .30rem;
+    padding: 3% 2%;
+    border-radius: .5rem;
 }
 
 .rounded-container {
-    padding: 40px;
-    border-radius: .30rem;
+    padding: 1.25rem;
+    border-radius: .5rem;
     background: #ffffff;
-    box-shadow: 0 0 50px rgba(0,0,0,0.25);
+}
+
+.table-container {
+    padding: 1%;
+    border-radius: .5rem;
 }
 
 .user-info {
     padding: 40px;
-    border-radius: .25rem;
-    border: rgba(0,0,0,.125) 1px solid;
+    border-radius: .5rem;
+    /*border: rgba(0,0,0,.125) 1px solid;*/
     background: #f8f9fa;
 }
 
@@ -62,17 +63,12 @@ p {
 }
 
 .smooth-shadow {
-    box-shadow: rgba(0, 0, 0, 0.2) 0 4px 25px;
-    transition: .35s ease-out;
-}
-
-.smooth-shadow:hover {
-    box-shadow: rgba(0, 0, 0, 0.2) 0 2px 10px;
+    box-shadow: 0 0 50px rgba(0,0,0,0.2);
 }
 
 .color {
     padding: 5px;
-    border-radius: .25rem;
+    border-radius: .5rem;
     width: 20%;
     text-align: center;
 }
@@ -113,4 +109,16 @@ p {
 
 .input {
     margin: 5% 0;
+}
+
+.btn-custom {
+    width: 20%;
+}
+
+.card {
+    border: none;
+}
+
+.form {
+    margin: 1.5rem;
 }
