--- a/src/main/resources/templates/worker/logUp.html
+++ b/src/main/resources/templates/worker/logUp.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row row-center">
                 <div class="col-md-1"></div>
-                <div class="col-md-10 rounded-container">
+                <div class="col-md-10 rounded-container smooth-shadow">
                     <h1>Регистрация нового сотрудника</h1>
 
                     <div class="input-group mb-2 mr-sm-2 input">
