--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,66 +45,21 @@
         <div class="container-fluid">
             <div class="row row-center">
                 <div class="col-12">
-                    <div class="rounded-container">
-                        <div class="card mb-3">
-                            <div class="bd-example">
-                                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                                    <ol class="carousel-indicators">
-                                        <li data-target="#carouselExampleCaptions" data-slide-to="0"
-                                            class="active"></li>
-                                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                    </ol>
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img th:src="@{/assets/ph-1.png}" class="d-block w-100" alt="...">
-                                            <div class="carousel-caption d-none d-md-block">
-                                                <h5>First slide label</h5>
-                                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img th:src="@{/assets/ph-2.png}" class="d-block w-100" alt="...">
-                                            <div class="carousel-caption d-none d-md-block">
-                                                <h5>Second slide label</h5>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img th:src="@{/assets/ph-3.png}" class="d-block w-100" alt="...">
-                                            <div class="carousel-caption d-none d-md-block">
-                                                <h5>Third slide label</h5>
-                                                <p>Praesent commodo cursus magna, vel scelerisque nisl
-                                                    consectetur.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
-                                       data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
-                                       data-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    <span><i class="fas fa-coffee"></i></span>
-                                    <span th:text="' ' + #{txt.card.greetings}"></span>
-                                </h5>
-                                <p th:text="#{txt.card.greetings.body}" class="card-text"></p>
-                                <p class="card-text">
-                                    <small class="text-muted">
-                                        <span th:text="#{txt.blockquote}"></span>
-                                        <cite th:text="#{txt.blockquote.author}"></cite>
-                                    </small>
-                                </p>
+                    <div class="rounded-container smooth-shadow">
+                        <div class="title-container">
+                            <span><i class="fas fa-coffee"></i></span>
+                            <h2 th:text="#{txt.card.greetings}"></h2>
+                        </div>
+                        <div class="rounded-container smooth-shadow">
+                            <div class="user-info">
+                                <p class="bd-title" th:text="#{txt.card.greetings.body}"></p>
+                                <blockquote class="blockquote small">
+                                    <p class="mb-0">"<span th:text="#{txt.blockquote}"></span>"</p>
+                                    <footer class="blockquote-footer" th:text="#{txt.blockquote.author}"></footer>
+                                </blockquote>
                                 <div>
-                                    <a th:href="@{/worker/logIn}" role="button" class="btn btn-success btn-lg">
+                                    <a th:href="@{/worker/logIn}" role="button"
+                                       class="btn-custom btn btn-success">
                                         <span th:text="#{btn.login}"></span>
                                     </a>
                                 </div>
@@ -114,8 +69,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- SCRIPTS -->
         <script th:src="@{/js/jquery-3.3.1.js}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
                 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -124,7 +77,5 @@
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
         <script th:src="@{/js/main.js}"></script>
-        <script th:src="@{/js/user/User.js}"></script>
-        <script th:src="@{/js/user/workerService.js}"></script>
     </body>
 </html>
