--- a/src/main/resources/templates/error/405.html
+++ b/src/main/resources/templates/error/405.html
@@ -7,9 +7,9 @@
         <title th:text="#{title.error.oops}"></title>
         <link rel="icon" th:href="@{/assets/bank-icon.png}">
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-        <link rel="stylesheet" th:href="@{/css/error.css}">
+        <link rel="stylesheet" th:href="@{/css/main.css}">
     </head>
-    <body class="background-img">
+    <body>
         <div class="container-fluent">
             <div class="row">
                 <div class="col-md-1"></div>
