--- a/src/main/resources/templates/worker/logIn.html
+++ b/src/main/resources/templates/worker/logIn.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
-    <body class="background-img">
+    <body class="bg-blue">
         <header class="navbar fixed-top navbar-expand-lg navbar-light bg-light smooth-shadow">
             <a class="navbar-brand scroll-top">
                 <img th:src="@{/assets/bank-icon.png}"
