--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -67,7 +67,7 @@
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
                         <div class="title-container">
-                            <i class="fas fa-users"></i>
+                            <i class="avatar fas fa-users"></i>
                             <h2>
                                 <span th:text="#{nav.clients} + ' '"></span>
                                 <span class="badge badge-success" th:text="#{app.name}"></span>
@@ -100,7 +100,8 @@
                                                 <td th:text="${client.passport.middleName}"></td>
                                                 <td th:text="${client.passport.isMale} ?
                                         #{passport.gender.male} : #{passport.gender.female}"></td>
-                                                <td th:text="${client.passport.birthDate}"></td>
+                                                <td th:text="${#dates.format(client.passport.birthDate,
+                                                'dd.MM.yyyy')}"></td>
                                                 <td th:text="${client.passport.citizenship.countryName}"></td>
                                                 <td th:text="${client.passport.id}"></td>
                                                 <td><a th:href="@{'/client/' + ${client.id}}">
