--- a/src/main/resources/templates/worker/profile.html
+++ b/src/main/resources/templates/worker/profile.html
@@ -53,8 +53,8 @@
                     <div class="rounded-container smooth-shadow">
                         <div class="title-container">
                             <div th:switch="${worker.accessLevel.id}">
-                                <span th:case="1"><i class="fas fa-user-secret"></i></span>
-                                <span th:case="*"><i class="fas fa-user-tie"></i></span>
+                                <span th:case="1"><i class="avatar fas fa-user-secret"></i></span>
+                                <span th:case="*"><i class="avatar fas fa-user-tie"></i></span>
                             </div>
                             <h2>
                                 <span th:text="#{worker.greeting.text}"></span>
@@ -113,7 +113,7 @@
                                 <div class="user-info">
                                     <h5>
                                         <span th:text="#{passport.birth.date}"></span>:
-                                        <span th:text="${birthDate}"></span>
+                                        <span th:text="${#dates.format(worker.passport.birthDate,'dd.MM.yyyy')}"></span>
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.gender.label}"></span>:
@@ -139,11 +139,11 @@
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.date.of.issue}"></span>:
-                                        <span th:text="${dateOfIssue}"></span>
+                                        <span th:text="${#dates.format(worker.passport.dateOfIssue,'dd.MM.yyyy')}"></span>
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.date.of.expire}"></span>:
-                                        <span th:text="${dateOfExpire}"></span>
+                                        <span th:text="${#dates.format(worker.passport.dateOfExpire,'dd.MM.yyyy')}"></span>
                                     </h5>
                                 </div>
                             </div>
