--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -10,10 +10,10 @@
         <link rel="stylesheet" th:href="@{/css/main.css}">
     </head>
     <body>
-        <div class="container-fluent">
+        <div class="container">
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10 error-container">
+                <div class="col-1"></div>
+                <div class="col-10 error-container">
                     <div class="error-code">
                         <span>404</span>
                     </div>
