--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -63,7 +63,7 @@
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
                         <div class="title-container">
-                            <i class="fas fa-user-plus"></i>
+                            <i class="avatar fas fa-user-plus"></i>
                             <h2>
                                 <span th:text="#{title.client.create}"></span>
                             </h2>
