--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -66,16 +66,20 @@
             <div class="row row-center">
                 <div class="col-12">
                     <div class="rounded-container smooth-shadow">
+
+                        <!--Title-->
                         <div class="title-container">
                             <i class="avatar fas fa-users"></i>
                             <h2>
                                 <span th:text="#{nav.clients} + ' '"></span>
                                 <span class="badge badge-success" th:text="#{app.name}"></span>
-
                             </h2>
                         </div>
+
                         <div class="rounded-container smooth-shadow">
                             <div class="user-info">
+
+                                <!--Table-->
                                 <table class="table table-borderless table-hover">
                                     <thead>
                                         <tr>
