--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
                                 <p class="bd-title" th:text="#{txt.card.greetings.body}"></p>
                                 <hr>
                                 <blockquote class="blockquote small">
-                                    <p class="mb-0">"<span th:text="#{txt.blockquote}"></span>"</p>
+                                    <p class="mb-0" th:text="#{txt.blockquote}"></p>
                                     <footer class="blockquote-footer" th:text="#{txt.blockquote.author}"></footer>
                                 </blockquote>
                                 <div>
