--- a/src/main/resources/templates/worker/profile.html
+++ b/src/main/resources/templates/worker/profile.html
@@ -65,16 +65,16 @@
                             <div class="card-header">
                                 <ul class="nav nav-pills card-header-pills">
                                     <li class="nav-item">
-                                        <a id="btn-general" class="nav-link active" href="#"
+                                        <button id="btn-general" class="btn nav-link active"
                                            onclick="showCard('#general', '#btn-general')">
                                             <span th:text="#{worker.public.information}"></span>
-                                        </a>
+                                        </button>
                                     </li>
                                     <li class="nav-item">
-                                        <a id="btn-personal" class="nav-link" href="#"
+                                        <button id="btn-personal" class="btn nav-link"
                                            onclick="showCard('#personal', '#btn-personal')">
                                             <span th:text="#{worker.private.information}"></span>
-                                        </a>
+                                        </button>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link">
